--- a/small_prince/src/index.html
+++ b/small_prince/src/index.html
@@ -120,5 +120,18 @@
 
 		<p>And that is how I made the acquaintance of the little prince.</p>
 		<hr>
+
+		<a href="yandex.ru">Ссылка на Яндекс</a>
+
+		<div class="box">
+			Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции требует определения и уточнения экономической целесообразности принимаемых изменений. Не следует, однако, забывать, что повышение уровня гражданского сознания требует анализа прогресса профессионального общества. Идейные соображения высшего порядка, а также постоянное информационно-пропогандистское обеспечение нашей деятельности требует анализа системы обучения кадров, соответствующей насущным потребностям.
+		</div>
+		<div class="box">
+			Для современного мира выбранный нами инновационный путь способствует подготовке и реализации соответствующих условий активизации. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности требует от нас анализа соответствующих условий активизации. Идейные соображения высшего порядка, а также социально-экономическое развитие способствует повышению качества новых принципов формирования материально-технической и кадровой базы.
+		</div>
+
+
+
+
 </body>
 </html>
