--- a/wordpress/index.html
+++ b/wordpress/index.html
@@ -55,11 +55,41 @@
 				<div class="waiting_item">
 					<img src="img/waiting/3.png" alt="3" class="waiting_img">
 					<div class="waiting_descr">Вы узнаете, что такое «хорошая индексация»,
-						«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех этих показателей!</</</div>
+						«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех этих показателей!</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<section class="optimization">
+		<div class="container">
+			<h2 class="optimization_header">Что такое оптимизация и зачем она нужна?</h2>
+			<div class="optimization_text">
+				На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из них совпадает не только по категориям, но и по содержанию. 
+				<br><br>
+				Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или продается одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах. 
+				<br><br>
+				Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10 позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для вывода вашего сайта на первую страницу поиска! 
+				<br><br>
+				<span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые страницы, обходя всех конкурентов.</span>
+			</div>
+		
+		<img src="img/Layer_15.jpg" alt="woman" class="optimization_img">
+
+		</div>
+	</section>
+
+
+
+
+
+<!-- 	<div class="my-flex-container">
+		<div class="my-flex-block">item1</div>
+		<div class="my-flex-block">item2</div>
+		<div class="my-flex-block">item3</div>
+		<div class="my-flex-block">item4</div>
+		<div class="my-flex-block">item5</div>
+	</div> -->
 
 </body>
 </html>
