--- a/wordpress/index.html
+++ b/wordpress/index.html
@@ -79,9 +79,56 @@
 		</div>
 	</section>
 
+	<section class="finish">
+		<div class="container">
+			<h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+			<div class="finish_divider"></div>
 
+			<!-- .finish_wrapper>.finish_item*5>.finish_round>img.finish_icon+.finish_descr -->
+			<div class="finish_wrapper">
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/finish/1.png" alt="1" class="finish_icon">
+					</div>
+					<div class="finish_descr">Создать свой сайт или блог</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/finish/2.png" alt="2" class="finish_icon">
+					</div>
+					<div class="finish_descr">Правильно его оптимизировать</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/finish/3.png" alt="3" class="finish_icon">
+					</div>
+					<div class="finish_descr">Обеспечить ему медленный, но верный рост в ТОП</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/finish/4.png" alt="4" class="finish_icon">
+					</div>
+					<div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/finish/5.png" alt="5" class="finish_icon">
+					</div>
+					<div class="finish_descr">Получать ощутимую прибыль</div>
+				</div>
+			</div>
+		</div>
+	</section>
+ 
+	<section class="bonus">
+		<div class="container">
+			<img src="icons/gift.png" alt="gift" class="bonus_img">
+			<div class="gift_descr">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
+			<button class="gift_btn">Записаться на интенсив!</button>
+		</div>
+	</section>
 
-
+	
 
 <!-- 	<div class="my-flex-container">
 		<div class="my-flex-block">item1</div>
