finish test page

--- a/wordpress/index.html
+++ b/wordpress/index.html
@@ -128,7 +128,23 @@
 		</div>
 	</section>
 
-	
+	<section class="webinar">
+			<div class="webinar_text">
+				<img src="icons/webinar.png" alt="webinar" class="webinar_logo">
+				<h2 class="webinar_first">Первый вебинар состоится:</h2>
+				<h2 class="webinar_date">10 сентября в 20:00 по Москве</h2>
+				<h2 class="webinar_desc">Успейте записаться, количество мест ограничено!</h2>
+			</div>
+	</section>
+
+	<footer>
+		<div class="footer_info">
+			<a class="footer_link" href="ya.ru">Служба поддержки</a>
+			<p class="footer_link">|</p>
+			<a class="footer_link" href="ya.ru">Политика конфиденциальности</a>
+			<p class="footer_phone">Позвоните нам 8-800-555-01-21</p>
+		</div>
+	</footer>
 
 <!-- 	<div class="my-flex-container">
 		<div class="my-flex-block">item1</div>
