--- a/wordpress/index.html
+++ b/wordpress/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>WORDPRESS интенсив</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	
 </head>
